--- a/metadata.yaml
+++ b/metadata.yaml
@@ -51,5 +51,6 @@ subjects:
 - !lcsh 'Romans -- Egypt -- Drama'
 - !lcsh 'Egypt -- History -- 332-30 B.C. -- Drama'
 - !lcsh 'Antonius, Marcus, 83?-30 B.C. -- Drama'
+- GITenberg
 title: Antoine et Cléopâtre
 url: http://www.gutenberg.org/ebooks/15942
